<resources>
    <string name="app_name">Mobilito</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="email">E-mail</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="dob">Date of Birth</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="book_ride">Book Ride</string>
    <string name="provide_ride">Provide Ride</string>
    <string name="booked_rides">Booked Rides</string>
    <string name="provided_rides">Provided Rides</string>
    <string name="profile">Profile</string>
    <string name="signout">Sign Out</string>
    <string name="start_location">Start Location</string>
    <string name="end_location">End Location</string>
    <string name="start_address">Start Address</string>
    <string name="end_address">End Address</string>
    <string name="expected_amount">Expected Amount</string>
    <string name="start_time">Start Time</string>
    <string name="no_seats">Number of Seats</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="no_copassengers">Number of Co-passengers</string>
    <string name="set_location">Set Location</string>
    <string name="check_location">Check Location</string>
    <string name="check_ride">Check Ride</string>
    <string name="booked">Booked</string>
    <string name="taker">Taker</string>
    <string name="finish_ride">Finish Ride</string>
    <string name="title_activity_maps_marker">MapsMarker</string>
    <string name="waiting_time">Waiting Time</string>
    <string name="amount">Amount</string>
    <string name="book_distance">Book Distance</string>
    <string name="choose_ride">Choose Ride</string>
    <string name="enter_location">Enter Location</string>
    <string name="new_to_mobilito">New to Mobilito?</string>
    <string name="provider">Provider</string>
    <string name="number_of_passengers">Number of Passengers</string>
    <string name="enjoy_ride">Did you enjoy the ride?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rating">Rating</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
</resources>