<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProvideRide">


    <TextView
        android:id="@+id/background5"
        android:layout_width="413dp"
        android:layout_height="730dp"
        android:background="#AF1C1C"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/login_tv2"
        android:layout_width="230dp"
        android:layout_height="41dp"
        android:text="@string/provide_ride"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/provideNoCopassengers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/provideRide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provide_ride"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/provideEndAddress"
        app:layout_constraintVertical_bias="0.945" />

    <EditText
        android:id="@+id/provideStartAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/start_address"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80DEEA"
        app:layout_constraintBottom_toTopOf="@+id/provideEndAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/provideExpectedAmount" />

    <EditText
        android:id="@+id/provideEndAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/end_address"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80DEEA"
        app:layout_constraintBottom_toTopOf="@+id/provideRide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/provideStartAddress"
        app:layout_constraintVertical_bias="0.968" />

    <EditText
        android:id="@+id/provideExpectedAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/expected_amount"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80DEEA"
        app:layout_constraintBottom_toTopOf="@id/provideStartAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/provideStartTime"
        app:layout_constraintVertical_bias="0.729" />

    <EditText
        android:id="@+id/provideStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"
        android:hint="@string/start_time"
        android:inputType="time"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80DEEA"
        app:layout_constraintBottom_toTopOf="@+id/provideExpectedAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/provideNoSeats"
        app:layout_constraintVertical_bias="0.976" />

    <EditText
        android:id="@+id/provideNoSeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/no_seats"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80DEEA"
        app:layout_constraintBottom_toTopOf="@+id/provideStartTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/provideVehicleModel"
        app:layout_constraintVertical_bias="0.966" />

    <EditText
        android:id="@+id/provideVehicleModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/vehicle_model"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80DEEA"
        app:layout_constraintBottom_toTopOf="@+id/provideNoSeats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/provideVehicleNumber"
        app:layout_constraintVertical_bias="0.963" />

    <EditText
        android:id="@+id/provideVehicleNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/vehicle_number"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80DEEA"
        app:layout_constraintBottom_toTopOf="@+id/provideVehicleModel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/provideNoCopassengers"
        app:layout_constraintVertical_bias="0.924" />

    <EditText
        android:id="@+id/provideNoCopassengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/no_copassengers"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80DEEA"
        app:layout_constraintBottom_toTopOf="@+id/provideVehicleNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_tv2"
        app:layout_constraintVertical_bias="0.906" />

</androidx.constraintlayout.widget.ConstraintLayout>